--- a/20-SEP/20sep2019.ipynb
+++ b/20-SEP/20sep2019.ipynb
@@ -484,7 +484,441 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LAMDAS"
+    "# LAMBDAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = lambda x : x%2==0\n",
+    "list(filter(h,[1,2,3,4,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odd_fun(n):\n",
+    "    if n%2!=0:\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5,6,7,8,9,10]\n",
+    "o = lambda i:i%2!=0\n",
+    "list(filter(o,l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "14\n",
+      "20\n",
+      "6\n",
+      "2\n",
+      "19\n",
+      "8\n",
+      "8\n",
+      "2\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random  import randint as r\n",
+    "for i in range(1,10+1):\n",
+    "    print(r(1,25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 25, 7, 11, 5, 9, 16, 21, 6, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([r(1,25) for i in range(1,11)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 12, 23, 24, 21, 11, 4, 13, 11, 14]\n",
+      "[20, 24, 2, 11, 15, 1, 10, 17, 20, 22]\n",
+      "[21, 24, 14, 21, 3, 8, 14, 9, 18, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m1 = [r(1,25) for i in range(1,11)]\n",
+    "m2 = [r(1,25) for i in range(1,11)]\n",
+    "m3 = [r(1,25) for i in range(1,11)]\n",
+    "print(m1)\n",
+    "print(m2)\n",
+    "print(m3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 18, 12, 17, 18, 6, 7, 15, 15, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = list(map(lambda x,y:(x+y)//2,m1,m2))\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 20, 13, 18, 13, 6, 9, 13, 16, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = list(map(lambda x,y,z:(x+y+z)//3,m1,m2,m3))\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3+5+5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.333333333333333"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "                13/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 7]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = lambda x:x<10\n",
+    "list(filter(k,a1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 9]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = lambda x:x<10\n",
+    "list(filter(r,a2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[21, 20, 13, 18, 13, 6, 9, 13, 16, 17]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2\n",
+    "S"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4]\n",
+    "a1 = np.array(l)\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l2 = [[1,2,3],[4,5,6]]\n",
+    "a2 = np.array(l2)\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l3 = [[1,2,3],[4,5,6],[6,7,8]]\n",
+    "a3 = np.array(l3)\n",
+    "print(a3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15,\n",
+       "        16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35,\n",
+       "        36, 37, 38, 39],\n",
+       "       [40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55,\n",
+       "        56, 57, 58, 59],\n",
+       "       [60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75,\n",
+       "        76, 77, 78, 79],\n",
+       "       [80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95,\n",
+       "        96, 97, 98, 99]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(100).reshape(5,20)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[20 21 22 23 24]\n",
+      " [25 26 27 28 29]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.arange(20,30).reshape(2,5)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[20 21 22]\n",
+      " [23 24 25]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.arange(20,26).reshape(2,3)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 12, 13],\n",
+       "       [14, 15, 16]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "x = np.arange(1,7).reshape(2,3)\n",
+    "y = np.arange(22,28).reshape(2,3)\n",
+    "z= np.arange(11,17).reshape(2,3)\n",
+    "x\n",
+    "y\n",
+    "z"
    ]
   },
   {
@@ -492,7 +926,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
